Last update on web UI and table 15/6/2020

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "nodemon": "^2.0.3",
+    "paginationjs": "^2.1.5",
     "tesseract.js": "^2.1.1",
     "validator": "^13.0.0"
   }
