--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^5.9.16",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.10",
     "nodemon": "^2.0.3",
     "paginationjs": "^2.1.5",
     "tesseract.js": "^2.1.1",
